added the complex design

--- a/wesite - assignment 1/index.html
+++ b/wesite - assignment 1/index.html
@@ -1,63 +1,43 @@
-<!-- <head>
-  <title>Visual studio</title>
-  <link rel="stylesheet" href="index.css" />
-  
-</head>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial=scale=1.0" />
+    <title>vs code</title>
+    <style>
+      .container {
+        width: 1200px;
+        margin: 0px auto;
+        background-color: red;
 
-<body>
-  
-    <div style="display: flex; justify-content: space-between;">
-      <img title="VS Code" width="20px" />
+      }
+      .content{
+        height: 500px;
+      }
+      .horizontal-center {
+        display: flex;
+        justify-content: center;
 
-      Visual Studio Code
+      }
 
-      <span class="mandatory" href>Docs</span>
-      <span class="mandatory">Updates</span>
-      <span class="mandatory">Blog</span>
-      <span class="mandatory">API</span>
-      <span class="mandatory">FAQ</span>
+      .vertical-center {
+        display: flex;
+        justify-content: center;
+        height: 500px;
+        flex-direction: column;
+
+      }
+    </style>
+  </head>
+
+  <body>
+    <div class="container">
+      <div class="content">
+        <div class="horizontal-center">
+          <div class="vertical-center">
+            <h1>hello</h1>
+          </div>
+        </div>
+      </div>
     </div>
-
-    <div>
-      <input type="text" placeholder="search docs" />
-
-      <button style="background-color: blue; color: aliceblue;">
-        Download
-      </button>
-    </div> <br/>
-  </div>
-  <div class="horizintal-edge">
-    <div style="background-color: brown;">devisha</div>
-    <div style="background-color: blue;">new</div>
-  </div>
-</body> -->
-
-
-<html>
-	<title>
-		Visual Studio Code - Code Editor
-	</title>
+  </body>
 </html>
-<body>
-	<div style="display: flex; justify-content: space-between;">
-		<div>Visual Studio Code</div>
-		<a href="/">Docs</span> 
-		<a href="/">Updates</span> 
-		<a href="/">Blog</span> 
-		<a href="/">API</span> 
-		<a href="/">Extensions</span> 
-		<a href="/">FAQs</span>
-		<a href="/">Learn</span>
-	</div>
-	<div>
-		<input type="text" placeholder="Search Docs">
-		<button>Download</button>
-	</div>
-	<br/>
-
-	<div>
-		<a href="/">Version 1.82</a> is now available! Read about the new features and fixes from July.
-	</div>
-
-	<br/>
-</body>
